css/style.css
/* ... */
.header__nav_link::before {
  content: "";
  display: block;
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 100%;
  background-color: transparent;
  -webkit-clip-path: polygon(100% 0, 100% calc(100% - 17px), calc(100% - 24px) 100%, 0 100%, 0 0);
  clip-path: polygon(100% 0, 100% calc(100% - 17px), calc(100% - 24px) 100%, 0 100%, 0 0);
  -webkit-transition: background-color 0.3s linear;
  transition: background-color 0.3s linear;
}

.header__nav_link,
.header__nav_link:hover,
.header__nav_link:active {
  position: relative;
  display: block;
  width: fit-content;
}

.header__nav_link {
  position: relative;
  z-index: 2;
  font-family: var(--text-font);
  font-size: 36px;
  font-weight: 600;
  text-transform: uppercase;
}

.header__nav_item.active .header__nav_link::before {
  background-color: var(--purple);
}

.header__subnav_list {
  display: none;
}

.header__nav_contact_item:not(:last-child) {
  margin-bottom: 22px;
}

.header__nav_contact_item p {
  margin-bottom: 20px;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
}

.header__nav_contact_head {
  font-family: var(--title-font);
  font-size: 36px;
  font-weight: 500;
  line-height: 45px;
}

.settings__block {
  width: 330px;
  padding: 0 50px;
  margin: 0 0 0 auto;
}

.settings__mode {
  position: relative;
  padding: 3px 50px;
  width: 180px;
  font-family: var(--text-font);
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  color: var(--text);  
  text-transform: uppercase;
  border: 1px solid var(--border);
}

[data-clr-mode-active="light"] {
  text-align: right;
}

[data-clr-mode-active="light"] [data-clr-mode="dark"],
[data-clr-mode-active="dark"] [data-clr-mode="light"]  {
  display: -ms-flexbox;
  display: -webkit-box;
  display: flex;
  align-items: center;
  justify-content: center;
}

.settings__mode_btn {
  transform: translateY(-50%);
  position: absolute;
  top: 50%;
  display: none;
  width: 40px;
  height: 40px;
}

.settings__mode_btn svg {
  width: 16.06px;
  height: 17.51px;
}

.settings__mode_btn[data-clr-mode="dark"] {
  left: -1px;
  background: var(--purple);
  color: #cfcfcf;
}

.settings__mode_btn[data-clr-mode="light"] {
  right: -1px;
  background: var(--orange);
  color: #fff;
}

.settings {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  flex-wrap: wrap;
  justify-content: space-between;
}

.header__nav_bottom_social {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 15px 60px;
}

.header__nav_bottom_link {
  font-size: 12px;
  font-weight: 700;
}

.header__nav_bottom_link:hover {
  color: var(--purple);
}

.header__nav_burger_flex {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.header__nav_burger {
  position: absolute;
  top: 33px;
  right: 33px;
  z-index: 1;
}

.settings__language,
.settings__language_control {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  gap: 10px;
}

.settings__language {
  width: 50%;
  padding: 0 50px;
  align-items: center;
}

.settings__language_icon {
  display: -ms-flexbox;
  display: -webkit-box;
  display: flex;
  width: 16.67px;
  height: 16.67px;
}

.settings__language_icon svg {
  width: 16.67px;
  height: 16.67px;
}

/* end header__nav */

/* start header__consultation */

.header__consultation {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: calc(100% - 80px);
  flex-direction: column;
  position: fixed;
  top: 80px;
  left: 0;
  right: 0;
  background-color: var(--bg);
  z-index: 100;
  -webkit-transform: translateX(100%);
  transform: translateX(100%);
  -webkit-transition: -webkit-transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s;
  transition: transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s;
  overflow: hidden;
}

.header__consultation.active {
  visibility: visible;
  -webkit-transition: -webkit-transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0s;
  transition: transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0s;
  -webkit-transform: translateX(0%);
  transform: translateX(0%);
}

.header__consultation_container {
  height: 100%;
}

.header__consultation_blocks {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: max-content;
  min-height: calc(100vh - 72px);
  padding: 60px 0;
  flex-direction: column;
  justify-content: center;
  position: relative;
}

.header__consultation_block {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  justify-content: space-between;
  gap: 0 60px;
}

.header__consultation_info {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 50%;
  flex-direction: column;
  justify-content: space-between;
  gap: 40px;
}

.header__consultation_say {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-direction: column;
  gap: 35px;
}

.header__consultation_head {
  font-size: 78px;
  font-weight: 700;
  line-height: 98px;
}

.header__consultation_desc {
  max-width: 295px;
}

.header__consultation_contacts {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.header__forms_form {
  width: 50%;
  max-width: 515px;
}

.header__forms_header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-direction: column;
  align-items: center;
	padding: 40px 50px 0;
}

.header__forms_header img {
  width: 128px;
  height: 30px;
	margin: 0 0 40px;
}

.header__forms_form_control {
  margin: 0 0 13px;
  padding: 0 0 17px;
	position: relative;
  overflow: hidden;
}
/* ... */

